# sqarkov

./: COPYING  sqarkov.cabal
migrations/: 20130716133734-add-gram7.down.sql  20130716133734-add-gram7.up.sql  20130717223735-add-random-phrase.down.sql  20130717223735-add-random-phrase.up.sql
src/: Import.hs  Query.hs
src/Sqarkov/: Char.hs  Database.hs  LogParse.hs  NGram.hs
